--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "prepare": "npm run compile",
     "pretest": "npm run compile",
     "posttest": "npm run lint",
-    "start": "ts-node src/index.ts",
-    "start-stg": "ts-node src/index.ts",
-    "start-prod": "ts-node src/index.ts"
+    "start": "nodemon index.ts",
+    "start-stg": "nodemon src/index.ts",
+    "start-prod": "nodemon src/index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.0",
     "@types/sharp": "^0.31.0",
     "@typescript-eslint/parser": "^4.33.0",
     "axios": "^1.1.3",
@@ -27,13 +28,18 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "express": "^4.18.2",
+    "express-group-router": "^2.1.0",
     "gts": "^3.1.1",
+    "mongoose": "^6.8.2",
+    "nodemon": "^2.0.20",
     "openai": "^3.0.0",
     "sharp": "^0.31.1",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/deepai": "^1.0.0",
+    "@types/express": "^4.17.15",
     "@types/node": "^14.18.32",
     "gts": "^3.1.1",
     "typescript": "~4.7.0"
