--- a/package.json
+++ b/package.json
@@ -19,10 +19,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^9.0.0",
     "@types/sharp": "^0.31.0",
     "@typescript-eslint/parser": "^4.33.0",
+    "aws-sdk": "^2.1290.0",
     "axios": "^1.1.3",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "bluebird": "^3.7.2",
+    "cors": "^2.8.5",
     "deepai": "^1.0.21",
     "dotenv": "^16.0.3",
     "eslint-config-prettier": "^8.5.0",
@@ -31,17 +38,27 @@
     "express": "^4.18.2",
     "express-group-router": "^2.1.0",
     "gts": "^3.1.1",
-    "mongoose": "^6.8.2",
+    "helmet": "^6.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.8.3",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "openai": "^3.0.0",
     "sharp": "^0.31.1",
-    "ts-node": "^10.9.1"
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
+    "@types/aws-sdk": "^2.7.0",
+    "@types/bluebird": "^3.5.38",
+    "@types/cors": "^2.8.13",
     "@types/deepai": "^1.0.0",
     "@types/express": "^4.17.15",
-    "@types/node": "^14.18.32",
+    "@types/helmet": "^4.0.0",
+    "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^14.18.36",
     "gts": "^3.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "~4.7.0"
   }
 }
