--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.0",
+    "nodemailer-express-handlebars": "^6.0.0",
+    "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^2.0.20",
     "openai": "^3.0.0",
     "sharp": "^0.31.1",
@@ -57,6 +60,9 @@
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.4",
     "@types/node": "^14.18.36",
+    "@types/nodemailer": "^6.4.7",
+    "@types/nodemailer-express-handlebars": "^4.0.2",
+    "@types/nodemailer-smtp-transport": "^2.7.5",
     "gts": "^3.1.1",
     "ts-node": "^10.9.1",
     "typescript": "~4.7.0"
