--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prepare": "npm run compile",
     "pretest": "npm run compile",
     "posttest": "npm run lint",
-    "start": "nodemon index.ts",
+    "start": "npm run compile && nodemon index.ts",
     "start-stg": "nodemon src/index.ts",
     "start-prod": "nodemon src/index.ts"
   },
@@ -48,6 +48,7 @@
     "nodemon": "^2.0.20",
     "openai": "^3.0.0",
     "sharp": "^0.31.1",
+    "stripe": "^11.8.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
@@ -63,6 +64,7 @@
     "@types/nodemailer": "^6.4.7",
     "@types/nodemailer-express-handlebars": "^4.0.2",
     "@types/nodemailer-smtp-transport": "^2.7.5",
+    "@types/stripe": "^8.0.417",
     "gts": "^3.1.1",
     "ts-node": "^10.9.1",
     "typescript": "~4.7.0"
