--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.7.2",
+    "buffer-image": "^1.0.0",
     "cors": "^2.8.5",
     "deepai": "^1.0.21",
     "dotenv": "^16.0.3",
